Adjust composer.json file

--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,6 @@
     "phalcon/incubator": ">=1.3.4"
   },
   "autoload": {
-    "psr-0": {
-      "Wcoppens\\Phalcon\\ConfigLoader\\": ""
-    }
+    "psr-0": { "Wcoppens\\Phalcon\\ConfigLoader\\": "" }
   }
-
 }
