--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   "require": {
     "php": ">=5.5",
     "ext-phalcon": ">=1.2.4",
-    "phalcon/incubator": ">=1.3.4"
+    "phalcon/incubator": "2.1.x-dev"
   },
   "autoload": {
     "psr-0": { "Wcoppens\\Phalcon\\ConfigLoader": "" }
